# lpp

./: .gitignore  Cargo.toml  LICENSE  README.md  example.lpp  package.json
lpp/: Cargo.toml  build.rs
lpp-cli/: Cargo.toml
lpp-cli/src/: commands.rs  main.rs
lpp-grammar/: binding.gyp  grammar.js  package.json
lpp-grammar/test/corpus/: variable.lpp
lpp-macros/: Cargo.toml
lpp-parser/: Cargo.toml  grammar.js  package.json
lpp-parser/bindings/node/: binding.cc  index.js
lpp-parser/bindings/rust/: lib.rs
lpp-parser/src/: grammar.json  node-types.json  parser.c
lpp-parser/test/corpus/: binary.txt  expressions.txt  functions.txt  variable.txt
lpp/src/: ast.rs  debug.rs  error.rs  language.lalrpop  lib.rs  old_ast.rs
lpp/src/ast/: expression.rs  mod.rs  primitive.rs  statement.rs
lpp/src/util/: mod.rs  tree.rs  tree_printer.rs
