[package]
name = "lpp-cli"
description = "A command-line tool for Lua++."
version = "0.0.0"
authors = ["jackk <jack@wings.cx>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
lpp = { path = "../lpp" }
tree-sitter = "0.20.6"
tree-sitter-lpp = { path = "../lpp-parser" }
